force-app/main/default/objects/Checklist_Preenchido__c/Checklist_Preenchido__c.object-meta.xml
<CustomObject>
    <label>Checklist Preenchido</label>
    <nameField>
        <label>Nome de Checklist Preenchido</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists Preenchidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>