force-app/main/default/objects/Checklist_Preenchido__c/fields/Checklist_Modelo__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Modelo</label>
    <referenceTo>Checklist_Modelo__c</referenceTo>
    <relationshipLabel>Checklists Preenchidos</relationshipLabel>
    <relationshipName>Checklists_Preenchidos</relationshipName>
    <type>Lookup</type>
</CustomField>