force-app/main/default/objects/Checklist_Preenchido__c/fields/JSON_resposta__c.field-meta.xml
<CustomField>
    <fullName>JSON_resposta__c</fullName>
    <label>JSON resposta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>