force-app/main/default/objects/Checklist_Preenchido__c/fields/Ordem_de_trabalho__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_trabalho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Checklists Preenchidos</relationshipLabel>
    <relationshipName>Checklists_Preenchidos</relationshipName>
    <type>Lookup</type>
</CustomField>